sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:21: error: Unmatched closing brace '}' ignored here
}
^